--- a/day_1/index.html
+++ b/day_1/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="conteneur-parent">
+  <div class="card">
+    <!-- Contenu de la  carte ici -->
+     <div class="head_card">
+         <div class="img_card">
+             <img src="image/christian.jpg" alt="profile">
+         </div>
+        <div class="title_card">
+            <h2>Yankey N'wollé Ange Christian</h2>
+            <p>
+                Développeur Web et Mobile Junior
+            </p>
+        </div>
+     </div>
+     
+     <hr>
+  </div>
+</div>
+
 </body>
 </html>
