--- a/day_1/index.html
+++ b/day_1/index.html
@@ -21,8 +21,14 @@
             </p>
         </div>
      </div>
-     
+
      <hr>
+     <!-- le contenu du milieu -->
+     <div class="middle_card">
+        <div class="image_middle">
+            <img src="icon/personal-data.png" alt="personal-data">
+        </div>
+     </div>
   </div>
 </div>
 
