--- a/day_1/index.html
+++ b/day_1/index.html
@@ -4,33 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Profile Menu</title>
 </head>
 <body>
     <div class="conteneur-parent">
-  <div class="card">
-    <!-- Contenu de la  carte ici -->
-     <div class="head_card">
-         <div class="img_card">
-             <img src="image/christian.jpg" alt="profile">
-         </div>
-        <div class="title_card">
-            <h2>Yankey N'wollé Ange Christian</h2>
-            <p>
-                Développeur Web et Mobile Junior
-            </p>
-        </div>
-     </div>
+        <div class="card">
+            <!-- En-tête avec profil -->
+            <div class="head_card">
+                <div class="img_card">
+                    <img src="image/christian.jpg" alt="profile">
+                </div>
+                <div class="title_card">
+                    <h2>Yankey N'wollé Ange Christian</h2>
+                    <p>Développeur Web et Mobile Junior</p>
+                </div>
+            </div>
 
-     <hr>
-     <!-- le contenu du milieu -->
-     <div class="middle_card">
-        <div class="image_middle">
-            <img src="icon/personal-data.png" alt="personal-data">
-        </div>
-     </div>
-  </div>
-</div>
+            <hr>
 
+            <!-- Menu principal -->
+            <div class="middle_card">
+                <div class="image_middle">
+                    <!-- Personal Data -->
+                    <div class="menu-item">
+                        <img src="icon/personal-data.png" alt="personal-data">
+                        <p>Personal Data</p>
+                    </div>
+
+                    <!-- Messages -->
+                    <div class="menu-item">
+                        <img src="icon/icons8-message-50.png" alt="message">
+                        <p>Messages</p>
+                    </div>
+
+                    <!-- Notifications -->
+                    <div class="menu-item">
+                        <img src="icon/icons8-notification-30.png" alt="notification">
+                        <p>Notifications</p>
+                    </div>
+
+                    <!-- Location -->
+                    <div class="menu-item">
+                        <img src="icon/icons8-location-50.png" alt="location">
+                        <p>Location</p>
+                    </div>
+
+                    <!-- Community -->
+                    <div class="menu-item">
+                        <img src="icon/icons8-community-30.png" alt="community">
+                        <p>Community</p>
+                    </div>
+
+                    <hr>
+
+                    <!-- FAQs -->
+                    <div class="menu-item">
+                        <img src="icon/icons8-faqs-66.png" alt="faq">
+                        <p>FAQs</p>
+                    </div>
+
+                    <!-- Settings -->
+                    <div class="menu-item">
+                        <img src="icon/icons8-settings-50.png" alt="settings">
+                        <p>Settings</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Footer -->
+             <div class="footer_card">
+                <img src="icon/icons8-home-24.png" alt="home">
+                <img src="icon/icons8-person-30.png" alt="profile">
+                <img src="icon/icons8-increase-30.png" alt="increase">
+                <img src="icon/icons8-message-50.png" alt="email">
+             </div>
+        </div>
+    </div>
 </body>
 </html>
